@startuml

title __TOY's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.toy {
      class GA {
          {static} ~ seed : int
          ~ generationCount : int
          {static} + main()
          ~ selection()
          ~ crossover()
          ~ mutation()
          ~ getFittestOffspring()
          ~ addFittestOffspring()
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.toy {
      class Individual {
          ~ fitness : int
          ~ genes : int[]
          + Individual()
          + calcFitness()
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.algorithms.GAs.toy {
      class Population {
          ~ popSize : int
          ~ individuals : Individual[]
          ~ fittest : int
          + initializePopulation()
          + getFittest()
          + getSecondFittest()
          + getLeastFittestIndex()
          + calculateFitness()
      }
    }
  }
  

  GA o-- Population : population
  GA o-- Individual : fittest
  GA o-- Individual : secondFittest


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
